k8s/raw/langflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langflow
  namespace: langflow
spec:
  ingressClassName: nginx
  rules:
  - host: langflow.20.75.128.121.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: langflow-svc
            port:
              number: 80
